# EngineER

./: .gitignore  CMakeLists.txt  README.md  archive_libs.bat  setup_libs.bat
core/: CMakeLists.txt  build.bat  build_ios.sh
core/include/esc/component/: CameraComponent.hpp  CameraControllerComponent.hpp  ComponentBase.hpp  ComponentFactory.hpp  HeightMapComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  PhysicsComponent.hpp  TransformComponent.hpp
core/include/esc/entity/: Entity.hpp
core/include/esc/process/: Input.hpp  LightProcessor.hpp  PhysicsService.hpp  RenderableProcessor.hpp
core/include/esc/system/: CameraControllerSystem.hpp  CameraSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  SkyAtmosphereSystem.hpp  TerrainSystem.hpp  WorldManager.hpp
core/include/gui/: ColorUtils.hpp  FullscreenQuad.hpp
core/include/gui/framebuffer/: FrameBuffer.hpp
core/include/gui/light/: Attenuation.hpp  Light.hpp
core/include/gui/material/: Material.hpp  MaterialManager.hpp
core/include/gui/mesh/: GLMesh.hpp  MeshRegistry.hpp
core/include/gui/shader/: ShaderBinder.hpp  ShaderManager.hpp  ShaderProgram.hpp  ShaderTypes.hpp
core/include/gui/texture/: Texture.hpp  TextureManager.hpp
core/include/io/: MaterialIO.hpp  MeshDataSerializer.hpp  SceneSerializer.hpp
core/include/model/: AssetItem.hpp  MeshData.hpp  ProjectData.hpp  ProjectInfo.hpp  SceneData.hpp  SceneInfo.hpp  World.hpp
core/include/service/: AppContext.hpp  AssetsService.hpp  EditorService.hpp  EntityService.hpp  MeshService.hpp  ProjectService.hpp  SceneService.hpp  WindowService.hpp
core/include/test/: test.h
core/src/: GameWindow.cpp  Window.cpp
core/src/esc/process/: Input.cpp
core/src/gui/shader/: ShaderManager.cpp
core/src/service/: AssetsService.cpp  WindowService.cpp
editor/: CMakeLists.txt
editor/include/: MainWindow.hpp  Window.hpp
editor/include/component/: Component.hpp
editor/include/winodws/: ProjectWindow.hpp  SceneWindow.hpp
editor/include/winodws/editor/: AssetsWindow.hpp  EditWindow.hpp  EditorWindow.hpp  MaterialEditorWindow.hpp  ViewSceneWindow.hpp
editor/include/winodws/entity/: LoadEntity.hpp
editor/src/: MainWindow.cpp  main.cpp
editor/src/component/: Component.cpp
runtime/: CMakeLists.txt
runtime-android/: local.properties
runtime-android/app/: build.gradle
runtime-android/app/jni/myLib/include/: GameWindow.hpp  Window.hpp
runtime-android/app/jni/src/: CMakeLists.txt  YourSourceHere.cpp
runtime-android/app/libs/: jsoncpp-1.9.6.aar
runtime/src/: main.cpp
shader/: pbr.frag  pbr.vert  phong.frag  phong.vert
shader/SkyAtmosphere/: sky.frag  sky.vert
shader/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
